# SoNS2.0-SR

./: README.md
src/experiments/: CMakeLists.txt
src/experiments/1_Mission_Self-organized_hierarchy/: CMakeLists.txt
src/experiments/1_Mission_Self-organized_hierarchy/Variant2_Scattered_start/: CMakeLists.txt
src/experiments/2_Mission_Global_local_goals/: CMakeLists.txt
src/experiments/2_Mission_Global_local_goals/Variant2_Larger_less_dense_obstacles/: CMakeLists.txt
src/experiments/3_Mission_Collective_sensing_actuation/: CMakeLists.txt
src/experiments/3_Mission_Collective_sensing_actuation/Large_scale_pipuck_brain/: common.in.lua  morphologiesGenerator.in.lua  run.in.py  run_debug.in.py  sons_template.in.argos
src/experiments/3_Mission_Collective_sensing_actuation/Large_scale_simulation_experiments/: common.in.lua  run.in.py  sons_template.in.argos
src/experiments/3_Mission_Collective_sensing_actuation/Large_scale_simulation_experiments_with_random_brain/: README  common.in.lua  run.in.py
src/experiments/3_Mission_Collective_sensing_actuation/Real_robot_experiments_with_matching_simulations/: README  run.in.py  sons_template.in.argos
src/experiments/4_Mission_Binary_decision/: CMakeLists.txt
src/experiments/5_Mission_Splitting_merging/: CMakeLists.txt
src/experiments/6_Scalability/: CMakeLists.txt
src/experiments/6_Scalability/Scalability_in_SoNS_establishment_mission/: README  (+2 more)
src/experiments/8_Demo/: CMakeLists.txt
src/experiments/exp_0_hw_01_formation_1_2d_10p/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_02_obstacle_avoidance_small/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_03_obstacle_avoidance_large/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_0_hw_04_switch_line/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_05_gate_switch/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_0_hw_06_formation_1_3d_14p/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_0_hw_07_fault_tolerance/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_0_hw_08_split/: README  common.in.lua  run.in.py
src/experiments/exp_0_hw_09_1d_switch_rescue/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_0_hw_10_formation_1_2d_6p_group_start/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_1_simu_01_formation_10d/: CMakeLists.txt  run.in.py
src/experiments/exp_1_simu_02_obstacle_avoidance_small_10d/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_1_simu_03_obstacle_avoidance_large_10d/: README  common.in.lua  run.in.py
src/experiments/exp_1_simu_04_switch_line/: README  common.in.lua  run.in.py
src/experiments/exp_1_simu_08_split/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_1_simu_10_formation_10d_group_start/: common.in.lua  run.in.py
src/experiments/exp_2_simu_scalability/: CMakeLists.txt  README  common.in.lua  run.in.py  run_debug_forward_again.in.py  run_debug_reference_bump_test.in.py  scalability_200.patch  sons_template.in.argos
src/experiments/exp_2_simu_scalability_analyze/: common.in.lua  run.in.py
src/experiments/exp_3_simu_01_fault_tolerance_66/: README  common.in.lua  run.in.py
src/experiments/exp_3_simu_02_fault_tolerance_33/: CMakeLists.txt  README  common.in.lua  run.in.py
src/experiments/exp_3_simu_03_fault_tolerance_communication/: README  common.in.lua  run.in.py
src/experiments/exp_3_simu_04_fault_tolerance_visual/: README  common.in.lua  run.in.py
(+871 files in other folders)
