add_subdirectory(1_Mission_Self-organized_hierarchy)
add_subdirectory(2_Mission_Global_local_goals)
add_subdirectory(3_Mission_Collective_sensing_actuation)
add_subdirectory(4_Mission_Binary_decision)
add_subdirectory(5_Mission_Splitting_merging)
add_subdirectory(6_Scalability)
add_subdirectory(7_Fault_tolerance)
add_subdirectory(8_Demo)